# shiny-server

./: .gitignore  .mocharc.json  .nvmrc  CLAUDE.md  CMakeLists.txt  COPYING  Gruntfile.js  Jenkinsfile  Jenkinsfile.internal  NEWS  NOTICE.md  README.md  RMonitor.js  RMonitorClient.js  SockJSAdapter.R  Vagrantfile  app.py  binding.gyp  config.html  doubly-linked-list.js  etcpasswd.js  latest  meta-handler.js  npm-shrinkwrap.json  package.json  shiny-proxy-2.js  shiny-proxy.js  shiny-server.conf.sample  start-shiny-proxy.sh  start-shiny-server.sh  tsconfig.json  upstream.txt
.devcontainer/: devcontainer.json
0.4.0.0/: admin-guide.html  index.html
R/: SockJSAdapter.R
assets/: shiny-server.css  shiny-server.js  sockjs-1.0.3.min.js  welcome.html
assets/sample-apps/hello/: server.R  ui.R
config/: default.config  logrotate  multi-server.config  shiny-server-rules.config  shiny-server.conf.sample  user-apps.config  user-dirs.config  whitelist_headers.config
config/init.d/debian/: shiny-server
config/init.d/redhat/: shiny-server
config/init.d/suse/: shiny-server
config/systemd/: shiny-server.debian.service  shiny-server.redhat.service  shiny-server.service  shiny-server.suse.service
config/upstart/: shiny-server.conf
dev/: .gitignore  shiny-server.conf
dev/apps/py-hello/: app.py  main.py  pyproject.toml
dev/apps/r-hello/: app.R
docker/: README.md
docker/jenkins/: Dockerfile.centos5.9  Dockerfile.centos6.3  Dockerfile.centos7  Dockerfile.centos8  Dockerfile.ubuntu-12.04  Dockerfile.ubuntu-14.04  Dockerfile.ubuntu-18.04  Dockerfile.ubuntu-20.04  publish-build.sh
docker/ubuntu16.04/: Dockerfile
latest/: index.html
lib/: RMonitor.js  RMonitorClient.js  ReferenceCounter.js  doubly-linked-list.js  etcpasswd.js  globals.d.ts  main.js  main2.js  makedocs.js  meta-handler.js  port-forwarder.js  sample.ts  shiny-server.js
lib/config/: app-config.js  config.js  lexer.js  parser.js  schema.js  shiny-server-rules.config
lib/core/: connect-util.js  errors.js  fsutil.d.ts  fsutil.js  iputil.js  log.js  map.js  paths.js  permissions.js  python.js  python.ts  qutil.js  re-quote.js  render.js  shutdown.js  url-util.js
lib/events/: simple-event-bus.js
lib/proxy/: errorcode.js  http.js  multiplex.js  proxy.js  render.js  robust-sockjs.js  sockjs.js
lib/router/: config-router-util.js  config-router.js  directory-router.js  local-config-router.js  router.js  shiny-server-rules.config  squash-run-as-router.js  user-dirs-router.js
lib/scheduler/: scheduler-registry.js  scheduler.js  simple-scheduler.js  worker-entry.js
lib/server/: server.js
lib/transport/: shared.js  tcp.d.ts  tcp.js  unix-socket.js
lib/worker/: app-logger.js  app-spec.js  app-spec.ts  app-worker-handle.js  app-worker-info.js  app-worker.js  app-worker.ts  run-as.js  worker-registry.js
manual.test/: loadtest-xhr.js  loadtest.js  test-app-worker.js  test-config-config.js  test-config-parser.js  test-worker-registry-leak.js  test-worker-registry.js
manual.test/config/: bad2.config  schemaBad2.config
manual.test/phantomjs/: loadtest-user.js  loadtest.js  loadtime.js
os/0.4.0/: index.html
os/0.4.0.0/: index.html
os/0.4.2/: index.html
os/0.5.0/: index.html
os/1.0.0/: index.html
os/1.1.0/: index.html
os/1.2.0/: index.html
os/1.3.0/: index.html
os/1.4.0/: index.html
os/latest/: index.html
packaging/: make-package-jenkins.sh  make-package.sh
packaging/debian-control/: postinst.in  postrm.in  prerm.in
packaging/rpm-script/: postinst.sh.in  postrm.sh.in  posttrans.sh.in  prerm.sh.in
pro/0.4.1/: index.html
pro/0.4.2/: index.html
pro/0.5.0/: index.html
pro/1.1.0/: index.html
pro/1.2.0/: index.html
pro/1.4.0/: index.html
pro/latest/: index.html
python/: SockJSAdapter.py  shiny_express.py
samples/: welcome.html
samples/sample-apps/headers/: server.R  ui.R
samples/sample-apps/rmd/: index.Rmd
scripts/: create-log.sh  mkdir.sh
src/: CMakeLists.txt  launcher.cc  launcher.h  launcher.h.in  posix.cc
templates/: config.html  default.html  directoryIndex.html  error.html
test/: app-config.js  app-worker.js  config-router-util.js  config-router.js  http-proxy.js  iputil.js  mocha.opts  nested-locations.js  proxy-events.js  render.js  robust-sockjs.js  scheduler-registry.js  scheduler.js  simple-scheduler.js  squash-run-as-router.js  test-app-worker.js  test-config-config.js  test-config-lexer.js  test-proxy.js  test-serialized.js  test-worker-registry.js
test/config/: bad1.config  bad2.config  bad3.config  good.config  schemaBad1.config
test/configs/: bad1.config  bad2.config  testapps.config.in  valid.config
test/phantomjs/: loadtest.js
tools/: _setup-devenv-common.sh  bundle-offline-installer.js  check-licenses.js  check-upstream.sh  is-merged.sh  makedocs.js  memlog-view.R  preflight.sh  setup-devenv-debian.sh  setup-devenv-redhat.sh  shiny-server-orphans.sh  test-config.sh
vagrant/build-servers/ubuntu12.04/: Vagrantfile  build-sso.sh  setup.sh
vagrant/centos6/: Vagrantfile  setup.sh
vagrant/centos6/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id
vagrant/centos7/: Vagrantfile  setup.sh
vagrant/centos7/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
vagrant/nfs/: README.md  Vagrantfile  bootstrap-debian.sh  provision-nfs.sh  provision-sso.sh  shiny-server.conf
vagrant/ubuntu12.04/: Vagrantfile  setup.sh
vagrant/ubuntu13.04/: Vagrantfile  setup.sh
vagrant/ubuntu14.04/: Vagrantfile  setup.sh
vagrant/ubuntu15.04/: Vagrantfile  setup.sh
